--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -16,4 +16,7 @@
     await mermaid.run({querySelector:'code.language-mermaid'});
 </script>
 
+<!-- ClusterMaps-->
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=6KHTNskGKIHizgSVH1L30pgjFniH1til_msFart6q7s&cl=ffffff&w=a"></script>
+
 <!-- end custom footer snippets -->
