--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -66,7 +66,7 @@
   @include breakpoint($large) {
     position: relative;
     float: right;
-    width: $right-sidebar-width-narrow;
+    // width: $right-sidebar-width-narrow;
     margin-left: span(5 of 12);
     z-index: 10;
   }
